--- a/deploy/complete/helm-chart/mushop/charts/user/templates/oadb-admin-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/user/templates/oadb-admin-secret.yaml
@@ -1,4 +1,5 @@
-{{- if not .Values.osb.atp }}
+{{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
+{{- if not $usesOsb }}
 apiVersion: v1
 kind: Secret
 metadata:
