--- a/deploy/complete/helm-chart/mushop/values.yaml
+++ b/deploy/complete/helm-chart/mushop/values.yaml
@@ -3,6 +3,8 @@ global:
     service: "false"
   osb:
     instanceName: mushop
+  ociSecretName:
+  oadbWalletSecret:
 
 # Depending on the scenario, certain resources might need to be skipped.
 # For example, --set skip.streaming=true to disable required streaming secrets
@@ -47,13 +49,8 @@ user:
 
 secrets:
   streams:
-    compartmentId:
-    tenantId:
-    userId:
     region:
-    fingerprint:
-    passphrase:
-    keyFile: secrets/oci_streams_api_key.pem
+    compartmentId:
     streamName:
     # future support
     streamId:
