--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-job.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-job.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "catalogue.fullname" . }}-{{ .Values.image.tag }}-init-{{ .Release.Revision }}
+  name: {{ include "catalogue.fullname" . }}-init-{{ .Release.Revision }}
   labels: {{ include "catalogue.labels" . | nindent 4 }}
 spec:
   ttlSecondsAfterFinished: 120
