--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
