--- a/orders/build.gradle
+++ b/orders/build.gradle
@@ -25,9 +25,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.data:spring-data-rest-hal-browser'
+	implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+
 	compileOnly 'org.projectlombok:lombok'
 	// runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.oracle.jdbc:ojdbc8:18.3.0.0'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+
+dependencyManagement {
+     imports {
+          mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1"
+     }
 }
