More spring boot style

--- a/orders/build.gradle
+++ b/orders/build.gradle
@@ -21,6 +21,9 @@ repositories {
 }
 
 dependencies {
+	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
+		
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
@@ -30,11 +33,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 
-	compileOnly 'org.projectlombok:lombok'
-	// runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.oracle.jdbc:ojdbc8:18.3.0.0'
-	annotationProcessor 'org.projectlombok:lombok'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.h2database:h2'
+	
 }
 
 
