--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=Order-Service
 
-spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
+#spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
+spring.datasource.url=${JDBC_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+spring.jpa.show-sql=true
 
 spring.sleuth.sampler.probability=1
