--- a/shipping/pom.xml
+++ b/shipping/pom.xml
@@ -27,18 +27,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient_spring_boot</artifactId>
@@ -54,29 +51,30 @@
 			<artifactId>simpleclient_servlet</artifactId>
 			<version>0.0.21</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>com.oracle.oci</groupId>
   			<artifactId>oci-java-sdk</artifactId>
   			<version>1.5.0</version>
  		 </dependency>
- 		 
  		 <dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.8.1</version>
+			<version>3.8.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
-		
 		<dependency>
     		<groupId>org.bouncycastle</groupId>
     		<artifactId>bcpkix-jdk15on</artifactId>
     		<version>1.60</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180130</version>
 		</dependency>
 	</dependencies>
 
