Fixed bugs with application port, missing json dependency and publishing wrong key to streams

--- a/shipping/build.gradle
+++ b/shipping/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'com.oracle.oci:oci-java-sdk:1.5.0'
 	implementation 'org.apache.commons:commons-lang3:3.8.1'
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.60'
+	implementation 'org.json:json:20180130'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
