--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,13 +1,23 @@
-spring.application.name=Order-Service
+server.port=${port:8082}
+spring.data.mongodb.uri=mongodb://${db:orders-db}:27017/data
+endpoints.health.enabled=false
+spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
+spring.zipkin.enabled=${zipkin_enabled:false}
+spring.sleuth.sampler.percentage=1.0
+spring.application.name=orders
+
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
 
 #spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
 spring.datasource.url=${JDBC_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
 spring.jpa.show-sql=true
-
-spring.sleuth.sampler.probability=1
