--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -27,22 +27,19 @@ services:
     hostname: edge-router
     restart: always
   catalogue:
-    image: weaveworksdemos/catalogue:0.3.5
+    image: phx.ocir.io/intvravipati/mushop/catalogue:0.0.1
     hostname: catalogue
     restart: always
     cap_drop:
-      - all
+        - all
     cap_add:
-      - NET_BIND_SERVICE
+        - NET_BIND_SERVICE
     read_only: true
-  catalogue-db:
-    image: weaveworksdemos/catalogue-db:0.3.0
-    hostname: catalogue-db
-    restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_DATABASE=socksdb
+        - reschedule=on-node-failure
+        - OADB_USER=catalogue_user
+        - OADB_PW=default_Password1
+        - OADB_SERVICE=mcatalogue_tp
   carts:
     image: phx.ocir.io/intvravipati/mushop/cart:0.0.2
     hostname: carts
