--- a/wercker.yml
+++ b/wercker.yml
@@ -25,9 +25,15 @@ build-catalogue:
   steps:
     - wercker/golint
     - script:
-        name: Go to Catalogue Go folder
+        name: Go Lint Results
         code: cat lint_results.txt
+    - script:
+        name: Temp
+        code: echo $GO_PATH
+    - script:
+        name: Temp
+        code: cd src/catalogue
     - script:
         name: go build
         code: |
-          GO111MODULE=on GOARCH=amd64 GOOS=linux go build -a -installsuffix cgo -o /app src/catalogue/cmd/cataloguesvc
+          GO111MODULE=on GOARCH=amd64 GOOS=linux go build -a -installsuffix cgo -o /app cmd/cataloguesvc
