Error handling and compatability updates

--- a/src/storefront/test/docker-compose.yml
+++ b/src/storefront/test/docker-compose.yml
@@ -1,18 +1,10 @@
 version: '2'
 
 services:
-  edge-router:
-    image: phx.ocir.io/intvravipati/mushop/edge-router
-    # ports:
-    #   - '80:80'
-    hostname: edge-router
-    restart: always
-    environment:
-      - reschedule:on-node-failure
 
   # Storefront backend API service
   api:
-    image: phx.ocir.io/intvravipati/mushop/api
+    image: phx.ocir.io/intvravipati/mushop/api:0.0.2
     hostname: api
     restart: always
     ports:
@@ -37,6 +29,7 @@ services:
       - OADB_PW=default_Password1
       - OADB_SERVICE=mcatalogue_tp
 
+  # legacy catalogue
   # catalogue:
   #   image: weaveworksdemos/catalogue
   #   hostname: catalogue
@@ -51,30 +44,69 @@ services:
   #     - MYSQL_ROOT_PASSWORD=""
   #     - MYSQL_ALLOW_EMPTY_PASSWORD=true
   #     - MYSQL_DATABASE=socksdb
+
   carts:
-    image: weaveworksdemos/carts
+    image: phx.ocir.io/intvravipati/mushop/cart:0.0.2
     hostname: carts
     restart: always
+    cap_drop:
+      - all
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    tmpfs:
+      - /tmp:rw,noexec,nosuid
     environment:
-      - reschedule:on-node-failure
-  carts-db:
-    image: mongo
-    hostname: carts-db
-    restart: always
-    environment:
-      - reschedule:on-node-failure
+      - JDBC_URL=jdbc:oracle:thin:@db3_tp?TNS_ADMIN=./config
+      - DB_USER=ADMIN
+      - DB_PASSWORD=Welcome123$$$$$$
+      - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+  
   orders:
-    image: weaveworksdemos/orders
+    image: phx.ocir.io/intvravipati/mushop/orders:0.0.3
     hostname: orders
     restart: always
+    cap_drop:
+      - all
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    tmpfs:
+      - /tmp:rw,noexec,nosuid
     environment:
-      - reschedule:on-node-failure
-  orders-db:
-    image: mongo
-    hostname: orders-db
-    restart: always
-    environment:
-      - reschedule:on-node-failure
+      - JDBC_URL=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
+      - DB_USER=ADMIN
+      - DB_PASSWORD=Welcome123$$$$$$
+      - JAVA_OPTS=-Xms128m -Xmx128m -XX:+UseG1GC -Dlogging.level.aura.demo=TRACE -Djavax.net.ssl.trustStorePassword=Welcome123 -Djavax.net.ssl.keyStorePassword=Welcome123 -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+  
+  # legacy carts
+  # carts:
+  #   image: weaveworksdemos/carts
+  #   hostname: carts
+  #   restart: always
+  #   environment:
+  #     - reschedule:on-node-failure
+  # carts-db:
+  #   image: mongo
+  #   hostname: carts-db
+  #   restart: always
+  #   environment:
+  #     - reschedule:on-node-failure
+  
+  # legacy orders
+  # orders:
+  #   image: weaveworksdemos/orders
+  #   hostname: orders
+  #   restart: always
+  #   environment:
+  #     - reschedule:on-node-failure
+  # orders-db:
+  #   image: mongo
+  #   hostname: orders-db
+  #   restart: always
+  #   environment:
+  #     - reschedule:on-node-failure
+
   shipping:
     image: weaveworksdemos/shipping
     hostname: shipping
