--- a/src/queue/pom.xml
+++ b/src/queue/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>oracle.ateam</groupId>
+	<groupId>mushop</groupId>
 	<artifactId>queuemaster</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>queue-master</name>
