Auto DDL set to update. Tables will not be dropped at app startup

--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.url=${JDBC_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
 spring.jpa.show-sql=true
