--- a/deploy/kubernetes/complete-demo.yaml
+++ b/deploy/kubernetes/complete-demo.yaml
@@ -1,6 +1,58 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  name: api
+  labels:
+    name: api
+  namespace: mushop
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: api
+    spec:
+      imagePullSecrets:
+        - name: ocirsecret    
+      containers:
+      - name: api
+        image: phx.ocir.io/intvravipati/mushop/api:0.0.2
+        ports:
+         - containerPort: 3000
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 10001
+          capabilities:
+            drop:
+              - all
+            add:
+              - NET_BIND_SERVICE
+          readOnlyRootFilesystem: true
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp-volume
+      volumes:
+        - name: tmp-volume
+          emptyDir:
+            medium: Memory
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api
+  labels:
+    name: api
+  namespace: mushop
+spec:
+  ports:
+  - port: 3000
+    targetPort: 3000
+  selector:
+    name: api
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
   name: carts
   labels:
     name: carts
@@ -64,7 +116,6 @@ metadata:
   namespace: mushop
 spec:
   ports:
-    # the port that this service should serve on
   - port: 80
     targetPort: 80
   selector:
@@ -94,8 +145,6 @@ spec:
         env:
          - name: ZIPKIN
            value: zipkin.jaeger.svc.cluster.local
-         - name: JAVA_OPTS
-           value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
          - name: JDBC_URL
            value: "jdbc:oracle:thin:@mcatalogue_tp?TNS_ADMIN=./config"
          - name: OADB_USER
