--- a/src/carts/src/main/resources/application.properties
+++ b/src/carts/src/main/resources/application.properties
@@ -16,11 +16,11 @@ management.metrics.export.prometheus.enabled=true
 
 
 #spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
-spring.datasource.url=${JDBC_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:oracle:thin:@${OADB_SERVICE}?TNS_ADMIN=./config
+spring.datasource.username=${OADB_USER}
+spring.datasource.password=${OADB_PW}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
 spring.jpa.show-sql=true
