--- a/src/shipping/src/main/resources/application.properties
+++ b/src/shipping/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-#server.port=${port:8081}
+server.port=${port:80}
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
